# OpenHub

./: .gitignore  CLAUDE.md  DESIGN.md  ROADMAP.md  amplify.yml  todo.md
bypass/: .gitignore  ARCHITECTURE.md  README.md  lambda_handler.py  main.py  pyproject.toml  requirements.txt  template.yaml
bypass/api/: auth.py  cache.py  datasets.py
bypass/collector/: config.py  handler.py  s3_writer.py
bypass/connectors/: boj.py  cinii.py  datagojp.py  egov_law.py  estat.py  jma.py  jma_catalog.json  jshis.py  jshis_catalog.json
bypass/core/: auth.py  connector.py  credentials.py  credentials_dynamodb.py  credentials_memory.py  errors.py  models.py
bypass/tests/: conftest.py  test_api_auth.py  test_api_datasets.py  test_api_sources.py  test_collector_handler.py  test_collector_s3_writer.py  test_connector_boj.py  test_connector_cinii.py  test_connector_datagojp.py  test_connector_egov_law.py  test_connector_estat.py  test_connector_jma.py  test_connector_jshis.py  test_core_auth.py  test_core_auth_optional.py  test_core_credentials.py  test_core_credentials_dynamodb.py  test_core_credentials_memory.py  test_coverage_supplement.py  test_lambda_handler.py  test_main_cors.py
bypass/tests/fixtures/: boj_metadata_response.json  cinii_search_response.json  datagojp_search_response.json  egov_law_fetch_response.json  egov_law_search_response.json  estat_fetch_response.json
catalog/: .gitignore  CHANGELOG.md  README.md  auth.config.ts  auth.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  proxy.ts  vitest.config.ts
openhub/: ARCHITECTURE.md  (+2 more)
(+98 files in other folders)
